[SBE] Fix tests producing incorrect sort order

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Hide

      resmoke run --suite=core_sbe jstests/core/sorta.js

      resmoke run --suite=core_sbe jstests/core/sort2.js

      Show
      resmoke run --suite=core_sbe jstests/core/sorta.js resmoke run --suite=core_sbe jstests/core/sort2.js
    • Query Execution 2021-02-22, Query Execution 2021-03-08
    • None
    • None
    • None
    • None
    • None
    • None
    • None

          Assignee:
          Nikita Lapkov (Inactive)
          Reporter:
          Anton Korshunov
          Votes:
          0 Vote for this issue
          Watchers:
          2 Start watching this issue

            Created:
            Updated:
            Resolved: