SERVER-54490 Fix incorrect sort order for NaN and missing values in SBE