jstests/core/sort2.js
@@ -1,8 +1,4 @@
 // test sorting, mainly a test ver simple with no index
-// @tags: [
-//   sbe_incompatible,
-// ]
-
 t = db.sort2;
 
 t.drop();
