jstests/core/sorta.js
@@ -1,8 +1,4 @@
 // SERVER-2905 sorting with missing fields
-// @tags: [
-//   sbe_incompatible,
-// ]
-
 (function() {
 'use strict';
 
